Setting up GitHub Pages project, and updating the landing page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pin Windows by DavidMoore</title>
+    <title>Pin Windows by David Moore</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -21,16 +21,25 @@
         <p>A simple application to allow you to pin or unpin any open applications, so that they stay on top of other windows.</p>
         <p class="view"><a href="https://github.com/DavidMoore/PinWindows">View the Project on GitHub <small>DavidMoore/PinWindows</small></a></p>
         <ul>
-          <li><a href="https://github.com/DavidMoore/PinWindows/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/DavidMoore/PinWindows/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/DavidMoore/PinWindows/zipball/master">Download code <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/DavidMoore/PinWindows/tarball/master">Download code <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/DavidMoore/PinWindows">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h3>
-<a name="pin-windows" class="anchor" href="#pin-windows"><span class="octicon octicon-link"></span></a>Pin Windows</h3>
+        <h3><a name="pin-windows" class="anchor" href="#pin-windows"><span class="octicon octicon-link"></span></a>Pin Windows</h3>
+          
+          <h3>Installation</h3>
 
-<p>You can use Pin Windows to pin a window to the top, so that it stays visible in front of all other windows.</p>
+          <p>
+              <a id=install href="install/PinWindows.application">Install now (ClickOnce)</a>
+              &nbsp;&middot;&nbsp;
+              <a id=install href="install/setup.exe">Download installer</a>
+          </p>
+
+          <h3>Support</h3>
+
+          <p>If you would like to report any bugs or request new features, please check out <a href="https://github.com/DavidMoore/PinWindows/issues">https://github.com/DavidMoore/PinWindows/issues</a></p>
       </section>
     </div>
     <footer>
